# snekfml

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  autobuild  autotest  meson.build
.github/workflows/: c-cpp.yml  codeql.yml
output/: assets
src/: game.cpp  game.hpp  gameconfig.h  main.cpp
